@@ -29,6 +29,8 @@ For WMR9x8 stations, the first extra temperature sensor (packet code 4)
 now shows up as extraTemp1 (instead of outTemp). Thanks again to 
 Peter Ferencz.
 
+For WMR200 stations, altitude-corrected pressure is now emitted correctly.
+
 The LOOP value for daily ET on Vantages was too high by a factor of 10. 
 This has been corrected.
 
